Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26138

innodb_flush_log_at_trx_commit=3 doesn't flush

    XMLWordPrintable

Details

    Description

      "Since 10.2 this code was refactored to have switches in descending
      order, so value of 3 for innodb_flush_log_at_trx_commit is behaving
      the same as value of 2, that is no FSYNC is being enforced during
      COMMIT phase. The switch should however not be empty and cases 2 and 3
      should not have the identical contents."

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.