MDEV-26138 innodb_flush_log_at_trx_commit=3 doesn't flush

trx_flush_log_if_needed_low(): Do flush for both
innodb_flush_log_at_trx_commit=1 and
innodb_flush_log_at_trx_commit=3.

This is the 10.6 version of
10.2 commit 5f8651ac238d8d6cd3e4a7e3090b4b529f990331
which fixed a regression that had been introduced
in 2e814d4702d71a04388386a9f591d14a35980bfe
(breaking 288eeb3a31e4bfb52180f3906a4d354ac9cc457e).